src/Components/VsSection/vsSection.css
.vsSection__Main-Container{
    width: 100%;   
    padding-top: 200px;
}
.vsSection__Title-Container{
    display: flex;
    width: 100%;
    justify-content: space-around;    
}
.vsSection__Title{
    font-size: 80px;
    font-weight: 600;
    font-family: "Archivo", sans-serif;
}
.vsSection__Title2{
    font-family: "DM Serif Text", serif;
    font-weight: 400;
    font-style: italic;
}
.vsSection__Title3{
    color: #FC5306;
}
.vsSection__VS-Container{
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 100vw;
    width: 100%;    
}
.vsSection__Image-Container {
    flex: 1 1 auto; 
    max-width: 100%;
    text-align: center;
  }
  .vsSection__Image,
  .vsSection__Image-Arrow {
    max-width: 100%;
    height: auto;
    object-fit: contain;
  }
@media (max-width: 1024px) {
    .vsSection__Title{
        font-size: 50px;
    }
}
@media (max-width: 576px) {
    .vsSection__Main-Container{
        width: 100%;   
        padding: 0;
        padding-top: 100px;
    }
    .vsSection__Title-Container{
        flex-direction: column;
        padding: 20px;
        gap: 10px;
    }
    .vsSection__Title{
        font-size: 38px;
        line-height: 40px;
    }
    .vsSection__VS-Container{
        flex-direction: column;
        width: 100%;      
        justify-content: center;  
        align-items: center;
        gap: 20px;
    }
    .vsSection__Image-Container{
        width: 100%;
        display: flex;    
        justify-content: center;
        align-items: center;
    }    
    .vsSection__Image{
        width: 80%;        
    }
    .vsSection__Image-Arrow{
        width: 50%;
        transform: rotateY(180deg);
        transform: rotateX(180deg);        
    }
}

